@@ -79,6 +79,7 @@ geda_separator_expose (GtkWidget *widget, GdkEventExpose *event)
 {
   GedaSeparator *seperator = (GedaSeparator*)widget;
   GtkStateType   state;
+  GtkStyle       style;
   bool wide_separators;
   int  separator_width;
   int  separator_height;
@@ -93,11 +94,13 @@ geda_separator_expose (GtkWidget *widget, GdkEventExpose *event)
                         NULL);
 
   state = gtk_widget_get_state (widget);
+  style = geda_get_widget_style (widget);
 
   if (seperator->orientation == 0) { /* Horizontal */
 
     if (wide_separators) {
-        gtk_paint_box (widget->style, widget->window, state, GTK_SHADOW_ETCHED_OUT,
+        gtk_paint_box (style,
+                       widget->window, state, GTK_SHADOW_ETCHED_OUT,
                        &event->area, widget, "hseparator",
                        widget->allocation.x,
                        widget->allocation.y +
