@@ -1,3 +1,9 @@
+2020-06-16 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/widgets/geda_separator.c: Utilize macro:
+
+          * geda_get_widget_style
+
 2020-06-04 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_action.c: Revise geda_action_sync_menu_visible
